--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 
           <div class="navigation">
             <div class="nav-item">
-              <a href="#main" class="active">Головна</a>
+              <a  name="#main" class="active">Головна</a>
             </div>
             <div class="nav-item">
-              <a href="#opportunities">Можливості</a>
+              <a name="#opportunities">Можливості</a>
             </div>
             <div class="nav-item">
-              <a href="#advantages">Переваги</a>
+              <a name="#advantages">Переваги</a>
             </div>
             <div class="nav-item">
-              <a href="#contacts">Контакти</a>
+              <a name="#contacts">Контакти</a>
             </div>
           </div>
         </div>
